fix footer alignment

--- a/platform/platformsh.css
+++ b/platform/platformsh.css
@@ -81,11 +81,13 @@ body {
   bottom: 0;
   left: 0;
   text-align: left;
+  display: flex;
+  align-items: center;
 }
 
 .reveal > footer > img {
   margin-left: 3px;
-  margin-right: 3px;
+  margin-right: 20px;
   height: 1rem;
 }
 
